Cors error fixed with dev proxy. Simple role update with @requestBody. Dynamic admin role with @adminrolenameService